contact section + nav component + responsive on double img

--- a/src/app/app.classes.scss
+++ b/src/app/app.classes.scss
@@ -1,3 +1,7 @@
+.button-styleless {
+    background-color: transparent;
+    outline: inherit;
+}
 .input {
     background-color: var(--clr-bg-dark);
     border: none;
