--- a/src/app/app.tags.scss
+++ b/src/app/app.tags.scss
@@ -56,7 +56,7 @@ img {
     object-fit: cover;
 }
 main {
-    background-color: var(--clr-bg-light);
+    background-color: var(--clr-bg);
     display: flex;
     flex: 1;
     flex-direction: column;
