--- a/src/layout/footer/footer.scss
+++ b/src/layout/footer/footer.scss
@@ -4,7 +4,7 @@
     color: var(--clr-txt-onBg);
     display: flex;
     justify-content: space-between;
-    padding: var(--space-h) var(--space-giga);
+    padding: var(--space-giga);
     position: relative;
     text-decoration: var(--clr-txt-onBg);
     width: 100%;
