--- a/src/screens/home/sections/about/aboutSection.scss
+++ b/src/screens/home/sections/about/aboutSection.scss
@@ -9,6 +9,7 @@
         transform: translateX(0);
     }
     h2 {
+        margin-top: var(--space-h);
         opacity: 0;
         text-transform: uppercase;
         text-align: left;
