--- a/src/app/app.keyframes.scss
+++ b/src/app/app.keyframes.scss
@@ -1,6 +1,6 @@
 @keyframes appearFromLeft {
     0% {
-        transform: translateX(-10%);
+        transform: translateX(-20px);
         opacity: 0;
     }
     100% {
@@ -10,7 +10,7 @@
 }
 @keyframes appearFromRight {
     0% {
-        transform: translateX(10%);
+        transform: translateX(20px);
         opacity: 0;
     }
     100% {
@@ -20,7 +20,7 @@
 }
 @keyframes smallAppearFromBottom {
     0% {
-        transform: translateY(10%);
+        transform: translateY(10px);
         opacity: 0;
     }
     100% {
@@ -41,7 +41,7 @@
 }
 @keyframes appearFromTop {
     0% {
-        transform: translateY(-60%);
+        transform: translateY(-10px);
         opacity: 0;
     }
     100% {
@@ -63,6 +63,24 @@
     }
     100% {
         height: 0%;
+    }
+}
+@keyframes decreaseScaleX {
+    0% {
+        transform: scaleX(1);
+    }
+    100% {
+        transform: scaleX(0);
+    }
+}
+@keyframes disappearRight {
+    0% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+    100% {
+        transform: translateX(20px);
+        opacity: 0;
     }
 }
 @keyframes increaseOpacity {
