--- a/src/app/app.root.scss
+++ b/src/app/app.root.scss
@@ -13,18 +13,22 @@
     //=====================
     //=       COLORS      =
     //=====================
-    --clr-bg:                    rgb(238,240,242);
+    --clr-bg:                    rgb(255,255,255);
     --clr-bg-01:            rgba(238,240,242,0.1);
     --clr-bg-03:            rgba(238,240,242,0.3);
     --clr-bg-04:            rgba(238,240,242,0.4);
     --clr-bg-06:            rgba(238,240,242,0.6);
+    --clr-bg-dark:             rgb(208, 208, 208);
 
     --clr-bg-secondary:                rgb(0,0,0);
+    --clr-bg-secondary-02:        rgba(0,0,0, .2);
+    --clr-bg-secondary-03:        rgba(0,0,0, .3);
+    --clr-bg-secondary-04:        rgba(0,0,0, .4);
+    --clr-bg-secondary-05:        rgba(0,0,0, .5);
+    --clr-bg-secondary-07:        rgba(0,0,0, .7);
+    --clr-bg-secondary-08:        rgba(0,0,0, .8);
+    --clr-bg-secondary-09:        rgba(0,0,0, .9);
 
-    --clr-bg-dark:             rgb(208, 208, 208);
-    --clr-bg-light:              rgb(255,255,255);
-    --clr-bg-light-05:   rgba(255, 255, 255, 0.5);
-    --clr-bg-light-08:   rgba(255, 255, 255, 0.8);
     --clr-disabled:               rgba(0,0,0,0.4);
     --clr-txt:                         rgb(0,0,0);
     --clr-txt-06:                rgba(0,0,0, 0.6);
@@ -83,26 +87,30 @@
 }
 
 [data-theme="dark"] {
-    --clr-bg:                rgb(0, 28, 52);
-    --clr-bg-01:        rgba(0, 28, 52,0.1);
-    --clr-bg-03:        rgba(0, 28, 52,0.3);
-    --clr-bg-04:        rgba(0, 28, 52,0.4);
-    --clr-bg-06:        rgba(0, 28, 52,0.6);
+    --clr-bg:                       rgb(17, 16, 16);
+    --clr-bg-01:               rgba(17, 16, 16,0.1);
+    --clr-bg-03:               rgba(17, 16, 16,0.3);
+    --clr-bg-04:               rgba(17, 16, 16,0.4);
+    --clr-bg-06:               rgba(17, 16, 16,0.6);
+    --clr-bg-dark:               rgb(33, 35, 38);
 
-    --clr-bg-secondary:  rgb(255, 255, 255);
+    --clr-bg-secondary:         rgb(255, 255, 255);
+    --clr-bg-secondary-02: rgba(255, 255, 255, .2);
+    --clr-bg-secondary-03: rgba(255, 255, 255, .3);
+    --clr-bg-secondary-04: rgba(255, 255, 255, .4);
+    --clr-bg-secondary-05: rgba(255, 255, 255, .5);
+    --clr-bg-secondary-07: rgba(255, 255, 255, .7);
+    --clr-bg-secondary-08: rgba(255, 255, 255, .8);
+    --clr-bg-secondary-09: rgba(255, 255, 255, .9);
 
-    --clr-bg-dark:           rgb(1, 22, 42);
-    --clr-bg-light:          rgb(1, 33, 61);
-    --clr-bg-light-05: rgba(1, 33, 61, 0.5);
-    --clr-bg-light-08: rgba(1, 33, 61, 0.8);
 
-    --clr-disabled:     rgba(0, 28, 52,0.4);
+    --clr-disabled:            rgba(0, 28, 52,0.4);
 
-    --clr-txt:             rgb(238,240,242);
-    --clr-txt-06:    rgba(255,255,255, 0.6);
-    --clr-txt-04:     rgba(255,255,255,0.4);
-    --clr-txt-02:     rgba(255,255,255,0.2);
-    --clr-txt-01:     rgba(255,255,255,0.1);
+    --clr-txt:                    rgb(238,240,242);
+    --clr-txt-06:           rgba(255,255,255, 0.6);
+    --clr-txt-04:            rgba(255,255,255,0.4);
+    --clr-txt-02:            rgba(255,255,255,0.2);
+    --clr-txt-01:            rgba(255,255,255,0.1);
 
-    --clr-txt-onBg:            rgb(0, 0, 0);
+    --clr-txt-onBg:                   rgb(17, 16, 16);
 }
