--- a/src/layout/header/header.scss
+++ b/src/layout/header/header.scss
@@ -12,19 +12,52 @@
     position: fixed;
     top: 0;
     transform: translateY(-100%);
-    transition:
-        background-color var(--transition-theme),
-        color var(--transition-theme),
-        transform var(--transition-hover) ease-in-out;
+    transition: var(--transition-theme);
     width: 100%;
     z-index: 2;
 
     &-actions {
+        align-items: center;
         display: flex;
-        gap: var(--space-m);
+        gap: var(--space-l);
     }
 
     span {
         font-size: var(--size-l);
+    }
+
+    .line {
+        fill: none;
+        stroke: var(--clr-txt-onBg);
+        stroke-width: 2;
+        transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+            stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .line1 {
+        stroke-dasharray: 60 207;
+        stroke-width: 2;
+    }
+    .line2 {
+        stroke-dasharray: 60 60;
+        stroke-width: 2;
+    }
+    .line3 {
+        stroke-dasharray: 60 207;
+        stroke-width: 2;
+    }
+    .opened .line1 {
+        stroke-dasharray: 90 207;
+        stroke-dashoffset: -134;
+        stroke-width: 2;
+    }
+    .opened .line2 {
+        stroke-dasharray: 1 60;
+        stroke-dashoffset: -30;
+        stroke-width: 2;
+    }
+    .opened .line3 {
+        stroke-dasharray: 90 207;
+        stroke-dashoffset: -134;
+        stroke-width: 2;
     }
 }
