Starting "work" page + improving links in about section

--- a/src/components/design/modal/modal.scss
+++ b/src/components/design/modal/modal.scss
@@ -8,10 +8,10 @@
         .modal {
             &-backdrop {
                 opacity: 1;
-                pointer-events: all;
+                pointer-events: auto;
             }
             &-content {
-                pointer-events: all;
+                pointer-events: auto;
             }
         }
     }
