--- a/src/app/app.classes.scss
+++ b/src/app/app.classes.scss
@@ -2,6 +2,9 @@
     background-color: transparent;
     outline: inherit;
 }
+.first-screen-view {
+    padding-top: calc(var(--header-height) + var(--space-l));
+}
 .input {
     background-color: var(--clr-bg-dark);
     border: none;
