--- a/src/components/router/navigation/navigation.scss
+++ b/src/components/router/navigation/navigation.scss
@@ -16,7 +16,28 @@
         font-weight: 700;
         gap: var(--space-m);
         letter-spacing: 1.5px;
+        padding-inline: var(--space-l);
+        pointer-events: inherit;
+        position: relative;
         text-transform: uppercase;
+        &::before {
+            background-color: var(--clr-txt-onBg);
+            content: "";
+            height: 100%;
+            left: 0;
+            position: absolute;
+            top: 0;
+            transition: 0.2s ease-in-out;
+            width: var(--border-l);
+        }
+        &.default::before {
+            opacity: 0;
+            transform: scaleY(0);
+        }
+        &.hovered::before {
+            opacity: 1;
+            transform: scaleY(1);
+        }
     }
     &.closed {
         animation: decreaseScaleX 0.2s ease-in-out 0.5s forwards !important;
@@ -31,9 +52,12 @@
 
             @for $i from 1 through 3 {
                 &:nth-child(#{$i}) {
-                    animation-delay: (0.15s + (4 - $i) * 60ms);
+                        animation-delay: (0.15s + (4 - $i) * 60ms);
                     }
                 }
+            }
+            &::before {
+                transform: scaleY(0);
             }
     }
     &.opened {
