--- a/src/screens/home/sections/contact/sectionContact.scss
+++ b/src/screens/home/sections/contact/sectionContact.scss
@@ -1,6 +1,6 @@
 .contact {
     align-items: center;
-    background: url(images/grunge-pattern.webp) center/cover;
+    background: url(images/backgrounds/grunge-pattern.webp) center/cover;
     display: flex;
     justify-content: center;
     padding-block: 120px;
@@ -12,6 +12,7 @@
         display: flex;
         flex-direction: column;
         gap: 40px;
+        max-width: 1190px;
         opacity: 0;
         padding: 40px;
         transform: scale(0) translateY(5px);
