--- a/src/app/app.classes.scss
+++ b/src/app/app.classes.scss
@@ -18,7 +18,7 @@
     padding-left: var(--space-l);
     padding-right: var(--space-xh);
     transition:
-        background-color var(--transition-theme)
+        background-color var(--transition-theme),
         color var(--transition-theme);
 
     &:focus {
