--- a/src/app/app.keyframes.scss
+++ b/src/app/app.keyframes.scss
@@ -131,6 +131,16 @@
         transform: scaleY(1);
     }
 }
+@keyframes toolsAppearsAnim {
+    0% {
+        transform: scale(0) translateY(5px);
+        opacity: 0;
+    }
+    100% {
+        transform: scale(1) translateX(0);
+        opacity: 1;
+    }
+}
 @keyframes translateDown {
     0% {
         transform: translateY(-100%);
