--- a/src/app/app.tags.scss
+++ b/src/app/app.tags.scss
@@ -3,18 +3,14 @@ html {
     color: var(--clr-txt);
     height: 100%;
     scroll-behavior: smooth;
-    transition:
-        background-color var(--transition-theme)
-        color var(--transition-theme);
+    transition: background-color var(--transition-theme), color var(--transition-theme);
 }
 body {
     display: flex;
     height: 100%;
     flex-direction: column;
     font-family: --font-default;
-    transition:
-        background-color var(--transition-theme)
-        color var(--transition-theme);
+    transition: background-color var(--transition-theme), color var(--transition-theme);
     &::-webkit-scrollbar {
         background-color: transparent;
         transition: display var(--transition-hover) ease-in-out;
@@ -61,6 +57,7 @@ main {
     flex: 1;
     flex-direction: column;
     height: auto;
+    transition: background-color var(--transition-theme), color var(--transition-theme);
     z-index: 1;
 }
 h1,
