--- a/src/screens/aboutWork/aboutWork.scss
+++ b/src/screens/aboutWork/aboutWork.scss
@@ -6,4 +6,10 @@
     h1 span {
         font-family: --font-title;
     }
+
+    h1 {
+        animation: appearFromLeft 0.3s ease-in-out 0.35s forwards;
+        opacity: 0;
+        transform: translateX(-20px);
+    }
 }
