--- a/src/screens/aboutWork/sections/jobs/sectionJobs.scss
+++ b/src/screens/aboutWork/sections/jobs/sectionJobs.scss
@@ -4,8 +4,16 @@
     display: flex;
     flex-direction: column;
     gap: var(--space-l);
+    opacity: 0;
     padding: var(--space-xl) var(--space-xh);
+    transform: translateY(10%);
+    transition: .5s ease-in-out;
     width: 60%;
+
+    &.visible {
+        opacity: 1;
+        transform: translateY(0);
+    }
 
     &__company {
         align-items: center;
@@ -69,6 +77,17 @@
     min-height: 100vh;
     padding-block: var(--space-giga);
 
+    &.visible {
+        h2 {
+            transform: translateX(0);
+            opacity: 1;
+        }
+        > p {
+            transform: translateX(0);
+            opacity: 1;
+        }
+    }
+
     .experiences-container {
         align-items: center;
         display: flex;
@@ -76,8 +95,16 @@
         justify-content: center;
     }
 
+    h2 {
+        opacity: 0;
+        transform: translateX(-20px);
+        transition: 0.35s;
+    }
     > p {
         font-family: --font-title;
         font-size: 18px;
+        opacity: 0;
+        transform: translateX(20px);
+        transition: 0.3s ease-in-out;
     }
 }
