--- a/src/screens/home/home.scss
+++ b/src/screens/home/home.scss
@@ -1,15 +1,6 @@
-// @media screen and (min-width: 768px) {
-//     .home-background {
-//         transform: translate(-45%, -50%);
-//     }
-// }
-// @media screen and (max-width: 767px) {
-//     .home-background {
-//         transform: translate(-50%, -55%) scale(0.85);
-//     }
-// }
-
 .home {
+    background-color: var(--clr-bg);
+    z-index: -1;
     display: flex;
     flex: 1;
     flex-direction: column;
