--- a/src/screens/aboutWork/sections/projects/card/onlineProjectCard.scss
+++ b/src/screens/aboutWork/sections/projects/card/onlineProjectCard.scss
@@ -59,11 +59,12 @@
         transition: width 0.09s linear, background-color 0.15s ease-in-out;
         transform-origin: top;
         h3 {
-            text-align: center;
-            width: 70%;
+            font-size: 26px;
             opacity: 0;
+            text-align: center;
             transition: transform 0.25s ease-in-out, opacity 0.25s ease-out;
             transform: translateY(-200px);
+            width: 70%;
         }
         ul {
             width: 70%;
@@ -73,10 +74,13 @@
             gap: var(--space-m);
             li {
                 border-radius: var(--radius-m);
-                padding: var(--space-s) var(--space-m);
                 background-color: var(--clr-bg);
                 color: var(--clr-txt);
+                font-size: 18px;
+                font-weight: 500;
+                letter-spacing: 1px;
                 opacity: 0;
+                padding: var(--space-m) var(--space-l);
                 transform: scale(0) translateY(5px);
                 @for $i from 1 through 9 {
                     &:nth-child(#{$i}) {
