--- a/src/screens/aboutWork/sections/jobs/sectionJobs.scss
+++ b/src/screens/aboutWork/sections/jobs/sectionJobs.scss
@@ -1,80 +1,9 @@
-.job-card {
-    border-radius: var(--radius-m);
-    box-shadow: var(--shadow-default) var(--clr-bg-secondary-03);
-    display: flex;
-    flex-direction: column;
-    gap: var(--space-l);
-    opacity: 0;
-    padding: var(--space-xl) var(--space-xh);
-    transform: translateY(10%);
-    transition: .5s ease-in-out;
-    width: 60%;
-
-    &.visible {
-        opacity: 1;
-        transform: translateY(0);
-    }
-
-    &__company {
-        align-items: center;
-        display: flex;
-        font-size: 24px;
-        gap: var(--space-l);
-
-        &-logo {
-            align-items: center;
-            border-radius: 30px;
-            display: flex;
-            height: 50px;
-            justify-content: center;
-            overflow: hidden;
-            position: relative;
-            width: 50px;
-        }
-        img {
-            position: absolute;
-            height: 55px;
-        }
-    }
-    &__content {
-        display: flex;
-        flex-direction: column;
-        gap: var(--space-m);
-        padding: var(--space-m);
-    }
-    &__descriptions {
-        display: flex;
-        flex-direction: column;
-        gap: var(--space-m);
-        margin-bottom: var(--space-m);
-        padding-inline: var(--space-giga);
-        text-align: justify;
-    }
-    &__header {
-        align-items: center;
-        display: flex;
-        font-weight: 700;
-        justify-content: space-between;
-        padding: var(--space-m) var(--space-xl);
-        position: relative;
-
-        &::after {
-            background-color: var(--clr-bg-secondary);
-            bottom: calc(0px - (var(--space-l)/2));
-            content: "";
-            position: absolute;
-            height: var(--border-s);
-            left: 10%;
-            width: 80%;
-        }
-    }
-}
-
 .section-experiences {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
+    height: unset;
     padding-block: var(--space-giga);
 
     &.visible {
@@ -91,6 +20,7 @@
     .experiences-container {
         align-items: center;
         display: flex;
+        flex: 1;
         flex-direction: column;
         justify-content: center;
     }
