final version (NO MOBILE VERSION)

--- a/src/app/app.tags.scss
+++ b/src/app/app.tags.scss
@@ -71,7 +71,7 @@ textarea {
     font-family: "--font-default";
 }
 section {
-    height: 100vh;
+    min-height: 100vh;
 }
 ul {
     list-style: none;
