--- a/src/screens/aboutMe/aboutMe.scss
+++ b/src/screens/aboutMe/aboutMe.scss
@@ -15,6 +15,7 @@
         justify-content: center;
         line-height: 1.5;
         padding-inline: 20%;
+        padding-block: var(--space-xl);
         width: 100%;
     }
     .personality-tests {
