--- a/src/components/design/carousel/item/carouselItem.scss
+++ b/src/components/design/carousel/item/carouselItem.scss
@@ -1,8 +1,8 @@
 .carousel-item {
-    position: relative;
-    flex: 0 0 33%;
     cursor: pointer;
+    flex: 0 0 33%;
     pointer-events: auto;
+    position: relative;
     transition: opacity 0.3s ease-in-out;
 
     &.active {
@@ -11,14 +11,13 @@
 
     &__content {
         flex: 1;
-        width: 100%;
         position: relative;
+        width: 100%;
         z-index: 0;
     }
     &__filter {
-        backdrop-filter: blur(4px);
-        background-color: var(--clr-bg-06);
-        height: 100%;
+        backdrop-filter: blur(6px);
+        border-radius: var(--radius-m);
         left: 0;
         pointer-events: none;
         position: absolute;
