--- a/src/screens/aboutWork/sections/jobs/card/experienceCard.scss
+++ b/src/screens/aboutWork/sections/jobs/card/experienceCard.scss
@@ -1,4 +1,5 @@
 .experience-card {
+    background-color: var(--clr-bg);
     border-radius: var(--radius-m);
     box-shadow: var(--shadow-default) var(--clr-bg-secondary-03);
     display: flex;
@@ -44,6 +45,8 @@
         display: flex;
         flex-direction: column;
         gap: var(--space-m);
+        flex: 1;
+        overflow: hidden;
         padding: var(--space-m);
     }
     &__descriptions {
@@ -51,6 +54,7 @@
         flex-direction: column;
         gap: var(--space-m);
         margin-bottom: var(--space-m);
+        overflow-y: scroll;
         padding-inline: var(--space-giga);
         text-align: justify;
     }
