--- a/src/screens/aboutWork/sections/projects/container/onlineProjectsContainer.scss
+++ b/src/screens/aboutWork/sections/projects/container/onlineProjectsContainer.scss
@@ -1,7 +1,7 @@
 .online-projects-container {
     display: flex;
+    flex: 1;
     gap: var(--space-h);
     justify-content: space-between;
-    height: 100%;
     width: 100%;
 }
