--- a/src/screens/aboutWork/sections/projects/sectionProjects.scss
+++ b/src/screens/aboutWork/sections/projects/sectionProjects.scss
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     gap: var(--space-l);
-    padding-block: var(--space-h);
+    padding: var(--space-h) var(--space-giga);
+
     &.visible {
         h2 {
             animation: appearFromLeft 0.4s ease-out 0.3s forwards;
