--- a/src/screens/aboutWork/sections/projects/summary/projectSummary.scss
+++ b/src/screens/aboutWork/sections/projects/summary/projectSummary.scss
@@ -16,6 +16,7 @@
     transform: scale(0) translateY(20px);
     transition: .3s ease-in-out;
     width: 90vw;
+    max-width: 1600px;
 
     &.visible {
         opacity: 1;
