--- a/src/screens/aboutWork/sections/stacks/sectionStacks.scss
+++ b/src/screens/aboutWork/sections/stacks/sectionStacks.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: var(--space-xl);
+    padding-inline: var(--space-giga);
     width: 100%;
     &.visible {
         h2 {
