--- a/src/screens/home/sections/contact/sectionContact.scss
+++ b/src/screens/home/sections/contact/sectionContact.scss
@@ -1,10 +1,19 @@
 .contact {
     align-items: center;
-    background: url(images/backgrounds/grunge-pattern.webp) center/cover;
     display: flex;
     justify-content: center;
     padding-block: 120px;
     padding-inline: calc((100vw - 16px) / 12);
+    position: relative;
+
+    &-background {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
     &-content {
         align-items: center;
         background-color: var(--clr-bg);
