Improving cursor on buttons

--- a/src/layout/footer/footer.scss
+++ b/src/layout/footer/footer.scss
@@ -16,6 +16,9 @@
     a {
         color: var(--clr-txt-onBg);
     }
+    button {
+        cursor: pointer;
+    }
     em {
         font-family: --font-title;
     }
