--- a/src/layout/header/header.scss
+++ b/src/layout/header/header.scss
@@ -28,6 +28,10 @@
         gap: var(--space-l);
     }
 
+
+    button {
+        cursor: pointer;
+    }
     span {
         font-size: var(--size-l);
     }
