--- a/src/screens/aboutWork/sections/projects/summary/navigation/projectSummaryNavigation.scss
+++ b/src/screens/aboutWork/sections/projects/summary/navigation/projectSummaryNavigation.scss
@@ -18,6 +18,7 @@
     button {
         align-items: center;
         color: var(--clr-txt-04);
+        cursor: pointer;
         display: flex;
         font-size: 16px;
         font-weight: 700;
