--- a/src/screens/home/sections/intro/sectionIntro.scss
+++ b/src/screens/home/sections/intro/sectionIntro.scss
@@ -32,6 +32,7 @@
         .developper-name {
             background: linear-gradient(
                 90deg,
+                var(--clr-txt-onBg-05),
                 var(--clr-txt-onBg-03),
                 var(--clr-txt-onBg),
                 var(--clr-txt-onBg-05),
@@ -54,6 +55,7 @@
             font-size: 0.7em;
             background: linear-gradient(
                 90deg,
+                var(--clr-txt-onBg-05),
                 var(--clr-txt-onBg-03),
                 var(--clr-txt-onBg),
                 var(--clr-txt-onBg-04),
