Applying the advices of the big boss

--- a/src/app/app.root.scss
+++ b/src/app/app.root.scss
@@ -25,6 +25,7 @@
     --clr-bg-secondary-03:        rgba(0,0,0, .3);
     --clr-bg-secondary-04:        rgba(0,0,0, .4);
     --clr-bg-secondary-05:        rgba(0,0,0, .5);
+    --clr-bg-secondary-06:        rgba(0,0,0, .6);
     --clr-bg-secondary-07:        rgba(0,0,0, .7);
     --clr-bg-secondary-08:        rgba(0,0,0, .8);
     --clr-bg-secondary-09:        rgba(0,0,0, .9);
@@ -39,6 +40,9 @@
     --clr-txt-onBg-03:    rgba(255, 255, 255, .3);
     --clr-txt-onBg-04:    rgba(255, 255, 255, .4);
     --clr-txt-onBg-05:    rgba(255, 255, 255, .5);
+    --clr-txt-onBg-06:    rgba(255, 255, 255, .6);
+    --clr-txt-onBg-07:    rgba(255, 255, 255, .7);
+    --clr-txt-onBg-08:    rgba(255, 255, 255, .8);
 
     //=====================
     //=   BORDER RADIUS   =
