--- a/src/app/app.classes.scss
+++ b/src/app/app.classes.scss
@@ -6,12 +6,13 @@
     padding-top: calc(var(--header-height) + var(--space-l));
 }
 .input {
-    background-color: var(--clr-bg-dark);
+    --inset-shadow-clr: rgba(0, 0, 0, 0.1);
+    background-color: #484849;
     border: none;
     border-radius: var(--radius-round);
-    box-shadow: inset 0 1px 7px var(--clr-txt-01),
-                inset 0 4px 4px var(--clr-txt-01),
-                inset 0 -1px 1px var(--clr-txt-01);
+    box-shadow: inset 0 1px 7px var(--inset-shadow-clr),
+                inset 0 4px 4px var(--inset-shadow-clr),
+                inset 0 -1px 1px var(--inset-shadow-clr);
     color: var(--clr-txt);
     cursor: pointer;
     padding-block: var(--space-m);
