--- a/src/components/design/togglers/core/toggler.scss
+++ b/src/components/design/togglers/core/toggler.scss
@@ -1,20 +1,22 @@
 .toggler {
-    background-color: var(--clr-bg-03);
+    --inset-shadow-clr: rgba(0, 0, 0, 0.1);
+
+    background-color: #484849;
     border-radius: var(--radius-round);
-    box-shadow: inset 0 5px 30px var(--clr-txt-01),
-                inset 0 6px 8px var(--clr-txt-01),
-                inset 0 -3px 3px var(--clr-txt-01);
+    box-shadow: inset 0 5px 30px var(--inset-shadow-clr),
+                inset 0 6px 8px var(--inset-shadow-clr),
+                inset 0 -3px 3px var(--inset-shadow-clr);
     cursor: pointer;
     display: block;
     position: relative;
     transition: background-color var(--transition-theme);
 
     &__indicator {
-        background: linear-gradient(to bottom, var(--clr-bg-04), var(--clr-bg-06));
+        background: linear-gradient(to bottom, rgba(238, 240, 242, 0.4), rgba(238, 240, 242, 0.6));
         border-radius: 50%;
-        box-shadow: 0 1px 12px var(--clr-txt-04),
-                    inset 0 1px 1px var(--clr-bg-01),
-                    inset 0 -1px 1px var(--clr-bg-01);
+        box-shadow: 0 1px 12px rgba(0, 0, 0, 0.4),
+                    inset 0 1px 1px rgba(238, 240, 242, 0.1),
+                    inset 0 -1px 1px rgba(238, 240, 242, 0.1);
         position: absolute;
         top: 0;
         transform: scale(0.87);
