--- a/src/screens/aboutWork/sections/projects/card/onlineProjectCard.scss
+++ b/src/screens/aboutWork/sections/projects/card/onlineProjectCard.scss
@@ -31,10 +31,19 @@
                 transform: translateY(0);
                 transition-delay: 0.1s !important;
             }
-            p {
-                opacity: 1;
-                transition-delay: 0.35s;
+            .project-card {
+                &-explanation {
+                    opacity: 1;
+                    transition: 0.25s ease-in-out;
+                    transition-delay: 0.35s;
+                }
+                &-overview {
+                    opacity: 1;
+                    transition: 0.25s ease-in-out;
+                    transition-delay: 0.25s;
+                }
             }
+
             ul li {
                 animation: toolsAppearsAnim 0.11s ease-in-out forwards;
             }
@@ -70,11 +79,18 @@
             transform: translateY(-200px);
             width: 70%;
         }
-        p {
-            margin-top: var(--space-l);
-            opacity: 0;
-            transition: 0.25s ease-in-out;
+        .project-card {
+            &-explanation {
+                margin-top: var(--space-l);
+                opacity: 0;
+            }
+            &-overview {
+                opacity: 0;
+                text-align: center;
+                width: 80%;
+            }
         }
+
         ul {
             width: 70%;
             display: flex;
