Improving CV + responsive (no mobile version)

--- a/src/screens/aboutMe/sections/hobbies/hobby/hobby.scss
+++ b/src/screens/aboutMe/sections/hobbies/hobby/hobby.scss
@@ -3,7 +3,7 @@
     color: var(--clr-txt);
     display: flex;
     font-family: --font-title;
-    font-size: 6vh;
+    font-size: 4vw;
     height: 25vh;
     letter-spacing: var(--space-xs);
     overflow: hidden;
