--- a/src/screens/aboutWork/sections/jobs/card/experienceCard.scss
+++ b/src/screens/aboutWork/sections/jobs/card/experienceCard.scss
@@ -17,6 +17,7 @@
         p {
             font-family: --font-title;
             font-size: 24px;
+            text-align: center;
         }
     }
 
