--- a/src/screens/aboutWork/sections/projects/summary/views/videos/videosView.scss
+++ b/src/screens/aboutWork/sections/projects/summary/views/videos/videosView.scss
@@ -4,6 +4,7 @@
         display: flex;
         gap: var(--space-h);
         padding: var(--space-l);
+        width: 100%;
 
         &-title {
             font-weight: 600;
@@ -13,6 +14,9 @@
             padding-left: var(--space-m);
         }
 
+        iframe {
+            width: 25%;
+        }
         p {
             line-height: 1.5;
         }
