--- a/src/screens/home/sections/contact/header/contactHeader.scss
+++ b/src/screens/home/sections/contact/header/contactHeader.scss
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    width: 80%;
+    max-width: var(--max-content-width);
+    width: 100%;
 
     &::after {
         background-color: var(--clr-bg-secondary-05);
@@ -137,7 +138,7 @@
             height: 45px;
             justify-content: center;
             max-width: 330px;
-            min-width: 140px;
+            min-width: 200px;
             text-transform: uppercase;
             transition: 0.12s ease-in-out;
             width: calc(100% - 380px);
